# BomCardapio

./: .env.example  pyproject.toml
src/app/: main.py
src/app/db/: session.py
src/app/models/: group.py
